--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -11,7 +11,11 @@ spring:
       key-serializer: "org.apache.kafka.common.serialization.StringSerializer"
       value-serializer: "org.springframework.kafka.support.serializer.JsonSerializer"
       acks: all
-      retries: 3
+      retries: 10
+      properties:
+        enable.idempotence: true
+        max.in.flight.requests.per.connections: 5
+        transactional.id: api-gateway-tx
 
 management:
   endpoints:
