--- a/user-preferences-service/src/main/resources/application.yaml
+++ b/user-preferences-service/src/main/resources/application.yaml
@@ -1,3 +1,30 @@
+server:
+  port: 8081
+
 spring:
   application:
     name: user-preferences-service
+
+  datasource:
+    url: jdbc:postgresql://postgres:5432/preferences
+    username: postgres
+    password: postgres
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+  cache:
+    type: redis
+
+  data:
+    redis:
+      host: redis
+      port: 6379
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
