--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,5 +1,15 @@
+# ---------- Build Stage ----------
+#FROM maven:3.9.6-eclipse-temurin-17 AS build
+#WORKDIR /app
+#COPY pom.xml .
+#RUN mvn dependency:go-offline
+#COPY src ./src
+#RUN mvn package -DskipTests
+
+# ---------- Runtime Stage ----------
 FROM eclipse-temurin:17-jre
 WORKDIR /app
-COPY target/api-gateway-0.0.1-SNAPSHOT.jar app.jar
+#COPY --from=build /app/target/*.jar app.jar
+COPY target/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","app.jar"]
