--- a/user-preferences-service/Dockerfile
+++ b/user-preferences-service/Dockerfile
@@ -1,12 +1,15 @@
-# FROM maven:3.9.6-eclipse-temurin-17 AS build
-# WORKDIR /app
-# COPY pom.xml
-# RUN mvn dependency:go-offline
-# COPY src ./src
-# RUN mvn package -DskipTests
+# ---------- Build Stage ----------
+#FROM maven:3.9.6-eclipse-temurin-17 AS build
+#WORKDIR /app
+#COPY pom.xml .
+#RUN mvn dependency:go-offline
+#COPY src ./src
+#RUN mvn package -DskipTests
 
+# ---------- Runtime Stage ----------
 FROM eclipse-temurin:17-jre
 WORKDIR /app
+#COPY --from=build /app/target/*.jar app.jar
 COPY target/*.jar app.jar
 EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "app.jar"]
