--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,10 @@
     <modules>
         <module>api-gateway</module>
         <module>user-preferences-service</module>
-        <!-- 
+        <module>common-contract</module>
+        <module>notification-proto</module>
         <module>notification-dispatcher</module>
+        <!-- 
         <module>email-service</module>
         <module>sms-service</module>
         <module>push-service</module> 
