--- a/user-preferences-service/pom.xml
+++ b/user-preferences-service/pom.xml
@@ -99,6 +99,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.example.notification</groupId>
+			<artifactId>common-contract</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
