added dependency for Instant type

--- a/common-contract/pom.xml
+++ b/common-contract/pom.xml
@@ -28,6 +28,10 @@
 
     <!-- No Spring, no DB, no framework -->
     <dependencies>
+        <dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
         <!-- Intentionally empty -->
     </dependencies>
 
