--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -89,7 +89,11 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>com.example.notification</groupId>
+			<artifactId>common-contract</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
