--- a/notification-dispatcher/src/main/resources/application.yaml
+++ b/notification-dispatcher/src/main/resources/application.yaml
@@ -7,6 +7,14 @@ spring:
 
   kafka:
     bootstrap-servers: kafka:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      acks: all
+      retries: 10
+      properties:
+        enable.idempotence: true
+        max.in.flight.requests.per.connections: 5
     consumer:
       group-id: notification-dispatcher-group
       auto-offset-reset: earliest
