--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -28,10 +28,10 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
-<!--		<grpc.version>1.77.1</grpc.version>-->
-<!--		<protobuf-java.version>4.33.4</protobuf-java.version>-->
-		<grpc.version>1.62.2</grpc.version>
-		<protobuf.version>3.25.3</protobuf.version>
+		<grpc.version>1.77.1</grpc.version>
+		<protobuf-java.version>4.33.4</protobuf-java.version>
+<!--		<grpc.version>1.62.2</grpc.version>-->
+<!--		<protobuf.version>3.25.3</protobuf.version>-->
 		<spring-grpc.version>1.0.2</spring-grpc.version>
 	</properties>
 	<dependencies>
@@ -107,28 +107,28 @@
 <!--					</execution>-->
 <!--				</executions>-->
 <!--			</plugin>-->
-			<plugin>
-				<groupId>org.xolstice.maven.plugins</groupId>
-				<artifactId>protobuf-maven-plugin</artifactId>
-				<version>0.6.1</version>
-				<configuration>
-					<protocArtifact>
-						com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}
-					</protocArtifact>
-					<pluginId>grpc-java</pluginId>
-					<pluginArtifact>
-						io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
-					</pluginArtifact>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compile</goal>
-							<goal>compile-custom</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.xolstice.maven.plugins</groupId>-->
+<!--				<artifactId>protobuf-maven-plugin</artifactId>-->
+<!--				<version>0.6.1</version>-->
+<!--				<configuration>-->
+<!--					<protocArtifact>-->
+<!--						com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}-->
+<!--					</protocArtifact>-->
+<!--					<pluginId>grpc-java</pluginId>-->
+<!--					<pluginArtifact>-->
+<!--						io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}-->
+<!--					</pluginArtifact>-->
+<!--				</configuration>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<goals>-->
+<!--							<goal>compile</goal>-->
+<!--							<goal>compile-custom</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
