--- a/notification-dispatcher/src/main/resources/application.yaml
+++ b/notification-dispatcher/src/main/resources/application.yaml
@@ -35,3 +35,9 @@ spring:
 dispatcher:
   retry:
     max-attempts: 3
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, metrics
