--- a/email-service/pom.xml
+++ b/email-service/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>4.0.2</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>email-service</artifactId>
@@ -30,8 +30,6 @@
 		<java.version>17</java.version>
 		<grpc.version>1.77.1</grpc.version>
 		<protobuf-java.version>4.33.4</protobuf-java.version>
-<!--		<grpc.version>1.62.2</grpc.version>-->
-<!--		<protobuf.version>3.25.3</protobuf.version>-->
 		<spring-grpc.version>1.0.2</spring-grpc.version>
 	</properties>
 	<dependencies>
@@ -83,52 +81,6 @@
 
 	<build>
 		<plugins>
-<!--			<plugin>-->
-<!--				<groupId>io.github.ascopes</groupId>-->
-<!--				<artifactId>protobuf-maven-plugin</artifactId>-->
-<!--				<version>4.0.3</version>-->
-<!--				<configuration>-->
-<!--					<protoc>${protobuf-java.version}</protoc>-->
-<!--					<binaryMavenPlugins>-->
-<!--						<binaryMavenPlugin>-->
-<!--							<groupId>io.grpc</groupId>-->
-<!--							<artifactId>protoc-gen-grpc-java</artifactId>-->
-<!--							<version>${grpc.version}</version>-->
-<!--							<options>@generated=omit</options>-->
-<!--						</binaryMavenPlugin>-->
-<!--					</binaryMavenPlugins>-->
-<!--				</configuration>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<id>generate</id>-->
-<!--						<goals>-->
-<!--							<goal>generate</goal>-->
-<!--						</goals>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
-<!--			<plugin>-->
-<!--				<groupId>org.xolstice.maven.plugins</groupId>-->
-<!--				<artifactId>protobuf-maven-plugin</artifactId>-->
-<!--				<version>0.6.1</version>-->
-<!--				<configuration>-->
-<!--					<protocArtifact>-->
-<!--						com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}-->
-<!--					</protocArtifact>-->
-<!--					<pluginId>grpc-java</pluginId>-->
-<!--					<pluginArtifact>-->
-<!--						io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}-->
-<!--					</pluginArtifact>-->
-<!--				</configuration>-->
-<!--				<executions>-->
-<!--					<execution>-->
-<!--						<goals>-->
-<!--							<goal>compile</goal>-->
-<!--							<goal>compile-custom</goal>-->
-<!--						</goals>-->
-<!--					</execution>-->
-<!--				</executions>-->
-<!--			</plugin>-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
