--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<otel.version>1.38.0</otel.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -94,7 +95,53 @@
 			<artifactId>common-contract</artifactId>
 			<version>1.0.0</version>
 		</dependency>
+		<!-- OpenTelemetry API + SDK -->
+		<dependency>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-api</artifactId>
+<!--			<version>${otel.version}</version>-->
+		</dependency>
+
+		<dependency>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-sdk</artifactId>
+<!--			<version>${otel.version}</version>-->
+		</dependency>
+
+		<!-- OTLP exporter -->
+		<dependency>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-exporter-otlp</artifactId>
+<!--			<version>${otel.version}</version>-->
+		</dependency>
+		<!-- semconv -->
+		<!-- Source: https://mvnrepository.com/artifact/io.opentelemetry.semconv/opentelemetry-semconv -->
+		<dependency>
+			<groupId>io.opentelemetry.semconv</groupId>
+			<artifactId>opentelemetry-semconv</artifactId>
+			<version>${otel.version}</version>
+<!--			<scope>compile</scope>-->
+		</dependency>
+
+		<!-- Context propagation -->
+		<dependency>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-context</artifactId>
+<!--			<version>${otel.version}</version>-->
+		</dependency>
+
 	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.opentelemetry</groupId>
+				<artifactId>opentelemetry-bom</artifactId>
+				<version>1.55.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
