--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -2,13 +2,23 @@ receivers:
   otlp:
     protocols:
       grpc:
+      http:
+
+processors:
+  batch:
 
 exporters:
   logging:
     loglevel: debug
 
+  otlp/jaeger:
+    endpoint: "jaeger:4317"
+    tls:
+      insecure: true
+
 service:
   pipelines:
     traces:
       receivers: [otlp]
-      exporters: [logging]
+      processors: [batch]
+      exporters: [logging, otlp/jaeger]
